# yet-another-searcher

./: .gitignore  .gitmodules  README.md  recipients-key.pub
client/: Cargo.toml  arbitrage.sh  bla.txt  config.toml  mydata.csv  mydata.json  package.json  prism.ts  serum_open_orders.json  serums.txt  somecreatebs.js  somepython.py  somewebhooks2.js  top-tokens.json  update_accounts.txt  update_pks.json
client/data/: serum_open_orders.json  update_pks.json
client/lib/src/: amm_instruction.rs  route_instruction.rs  stable_instruction.rs
client/python/: account.json  main.py  setup_shyft.js
client/scripts/: arbitrage.sh  flashloan-arbitrage.sh  tmp.sh
client/src/: arb.rs  client.rs  constants.rs  flash_loan_once.rs  lib.rs  luts.json  main.rs  pool.rs  tmp.rs  utils.rs
client/src/client/: Cargo.toml
client/src/client/src/: main.rs
client/src/config/: mod.rs  runtime.rs  startup.rs
client/src/execute/: flash_loan_once.rs  mod.rs  process.rs
client/src/identify/: arb.rs  arbitrager.rs  mod.rs  search.rs
client/src/monitor/: README.md  mod.rs  setup.rs
client/src/monitor/pool_utils/: base.rs  constant_price.rs  constant_product.rs  fees.rs  offset.rs  orca.rs  stable.rs
client/src/monitor/pools/: aldrin.rs  math.rs  mercurial.rs  mod.rs  orca.rs  pool.rs  raydium.rs  saber.rs  serum.rs
client/src/monitor/receiver/: mod.rs
client/src/monitor/receiver/helius/: structs.rs
client/src/monitor/receiver/shyft/: handler.rs  http.rs  mod.rs  server.rs  structs.rs
client/src/pool_utils/: constant_price.rs  constant_product.rs  mod.rs  offset.rs  orca.rs  serum.rs
client/src/pools/: aldrin.rs  mercurial.rs  mod.rs  orca.rs  saber.rs  serum.rs
client/src/raydium-amm/program/src/: processor.rs
client/src/serialize/: pool.rs  token.rs
client/src/setup/: setup_ata.rs  setup_open_orders.rs
client/src/tests/: quotes.rs
client/src/tests/config/: config.rs
mainnet-fork/: new_scrape.ts  saved_mints.json
marginfi-v2/: Cargo.toml
marginfi-v2/programs/marginfi/fuzz/: Cargo.toml
onchain-data/: analyze.ts
pools/aldrin/: 13mL9xD2J8Nzwcm9z8y5MAgnzGeBX7DkgWze7sqT8a16.json  22qT9hfx8LPriwcnYP5XwCuduXGLmGyfa91BrABJ3HAp.json  239goRY1FUVKbdUkqCGN14CNTBV6WSKc8kyv1HvwFUra.json  2LNL6tjdhsToPPV4iCDApDUKCKXrbMp6RFEh5DTWijVt.json  2RYWtHhuV9sgxAHmLh34kN5BgZbcU182JiuMAvxWLQqa.json  2TgZ4QgYWXCgnXwpfno8AtGv2aQV5Ems7mBYLvm9mRWd.json  2Y19qD53tn85ZAwbsxJeAD1H2DDq4SzzuVjcruiAhri2.json  2YT2Y4dCbP1g4xNvGnSHmftyp9FApjBWxmFourLSSfGD.json  2Z4PGxqqXEVT4FE2zsTLCQD2LtQC5pDebeCZqsMQybQq.json  2ZMdBWE9uB8iFGQCkQWVuw6tgQdfGXtvCiYEwfxViFhh.json  2Zo5eAHzspkctYRWc92PNtudiotmV3yFnwmM62dt7qm4.json  2aNqyHAHXVTv6N5dTLejy1ZZQL9wAw56DJncbkFkPxAt.json  2dD5NpU9utEk6yeejZkSMbTAsEMM4H4vjLvt52Jr1ikp.json  2f3kqDXtTYRcitpmv5bnAZaJNqxU5uXaHxr5AVKsQCRD.json  2fbRWeSoUdDabwpSu5Nux4vBiv6twHnsqPVENMWNrzjq.json  2m9ZT6smigrmNKxSRe7to6HnYGMYTztsDiuoJM4k336j.json  2o83TXtZrgzub691p3tKnyFC67qVnQN8yCCW925WuBs6.json  31FqCrUCjjzW9oDstyNVSKTkRTAQzVkXtLzokU2YLELK.json  32vkryWdyGmPWxmcmA6uC9sqccSDf8rLB8VsrW2uzvGt.json  34wNFiZaLNHYXqVkwwet8gjsWg54hgRJ4dRY7dU9xnKp.json  376PCGdGdzUigwVY5XKcmagC29RyqoEyb31FWEhUqFLt.json  3HuwgLU7Sd8YtHfGJ97QvyL2pskH6DjicudZ8rWAX2wY.json  3K2S5WPRDDJ3NSvYyjwt71rRdnZFv3oDJHLUs2Lnc1fv.json  3LYQgFJscrB3fcR5WzqhY7dpETAj9BU9JazTLMJ9FKUz.json  3NpvGEXW4h8u3p7oX1F8Vg2tnybWEahx7JeVVYHo8zdZ.json  3QpsBWpF6G5DgJtJssfWQyioYNykLXpxvjqA3u9b9u2S.json  3QxbVE6P7ty9FbshXi2uTd3kwsrD51gnEtMa1S9s1EQi.json  3SbhGXhZMSoLJKMpGEvb29ZEsXcgmyTizMsjFYJxWPgL.json  3TPkAxES1sbNzwh5HUyUbu5wWn8UVfqVr5wci9TXBxD6.json  3WzMSBRZjtNC1ustZVroScf57Jm8YZ9rPgL9afsnfvNB.json  3ZFTVkCrnVvm7jqmVqYn1NupgG9k8BRqaui2BjMUMzwQ.json  3awZmETsuWFVSoE8BFkcve2hCqcydzrfcAai3SVmEN6D.json  3eVRfwNAVsJPEX6AKc9nz4fsPbCSwWLFhR7UbTwxNsQV.json  3gCx1LTFoSx1jGLsvyBh9hccQNns9wqYP7dZsR5XFP8x.json  3gigDvmgCuz2gWRhr6iSxH1gCd1k4LpYoUsxEjLWJcLB.json  3i7c8R49EcxF3ktkShMv8U4urphvFda1dQTRndknurMd.json  3kXvbo7ow2tLgEs84MW7cwwoEW7duRXGii8JuxzzVA5q.json  3sbMDzGtyHAzJqzxE7DPdLMhrsxQASYoKLkHMYJPuWkp.json  3yYcE878pgwwZd5JDvmG3EHRCLHbA8hu746tS9gLE1CN.json  41R7GwqGZFHUZTdDnve6yfgkXWHdyJwzBcr8NKU5Cer2.json  (+259 more)
pools/balansol/: 13Jn5xugRGjVorHWakzjvdZBMFwPLQniKHRoE6j4BMCC.json  2gtDG2iYam6z4eCjx9yfBD7ayRXQGTDymjqQLiHqr7Z6.json  2sd37XLN964PqiwJ53Ghy6VS9rY3wg6v9jXTWgyYTS9A.json  4JFd9kHUC4FoKaTL38YMGoXP68MNBT9sC1FZCmfMn1FC.json  4tVrfAhz2oQSkWLASjNJ7Aegrgsg78gRERoAtskqMd9N.json  5kGXS7qHqt2cxTUdBNe3ZhRsVCpp1SgN7Fz26pB8USUK.json  64LeMUs58fHUJ9d4C4zk6NsZEfpobVDxW3mBfxNqogbr.json  7248xpGYz1BYQD4h3jim1SnvQr5qx6nwSPWTcNdBLRZv.json  7RCzYjkywLTnvTND2GnVic27AHKvFV228hsmaLt1u53e.json  8c7vtUorQeHwNhWdLMB41MVF6F45aDTJ1stb2mhhbGWj.json  8fg9uJQ7aqZTGu8gYBmRaueN8NzQVfUfYPuCFcGsk9iD.json  9Doqn5jUSW8suHDmUc4MxvHi3XkVWebdaGNmnfDTxGZp.json  9VxsVMu91svWQykaMtok5BydVdKDydKs1FZa39rCBwT6.json  9sCTx86QDEuDmaMvkFiZBCDyfyQvvGpVwaaR29K9uhMu.json  ADRLu6W1H13AmXAsXbWfzN2JoUbwwBXwKAyqJx4m8fiW.json  AqDXrDgr6dJ19FKFVtwJZ6cZuWkJska7QembVRpN1B1E.json  AzPdQteHNWLvgRtFQX2N9K2U14M7rwub4VjEeKhaSbuh.json  BCy64M3fLJ4ftqZn1UQDyBP2471mvzXVcouF9LLYAaND.json  BW2PQz52AdwCXbezrM4yBTaSesr6aUtrtAZmfcikkboV.json  C15v6TsCp9tHL7qLrjGJprkQoVKBFbvyitVN3PwK6Y7J.json  CT2QmamF6kBBDVbkg8WkvF5gnq6q8mDranPi21tdGeeL.json  CWAGXQy2Ut2jxYvTervqSdEZ5fjELLqBv81AkRXwMiC9.json  DHitFbvRdDMHsi8wsPE56LJHTGZWUyJ4LZPtz9PYXhpv.json  DnoGmd6gr5a5W2Ziy9FXtFHz4LYZ6x7XXhT2WDF4dyQb.json  EFXLMKrPHpBjUUoD1fDWkBTwuZtF7gztKGC5Xt9fnbux.json  ELnaCWzhvtTAByMBmzBnbwUTuCt3z2acigkhRaUhwPgB.json  FcL7if4M5eMpvHhaaFBZ2iDgVrVyn3TP9b6zkLN8heZ.json  FhownP7d2EP7PCeoXVFk11WennsSaCoj4sZaQCEpvC89.json  H5we771DNCLR2tbdvKLYhHBLnspF7CyUmS1qck61HeDt.json  kPbhNnVmuhqWApxhr156XQV8hhKsysrvwVFmDhCWFY5.json  tGjspAD9LXaz7TmbMfQeZKygyws8cvSTrU1FGhgrhsd.json  undefined.json
pools/cropper/: 13m95HPv8umRhT8Zhqedvtmgrcnkmei6WgzAaW6Hk7UJ.json  13zjTX5fb2EHxT5QfHaZZ9CZgEDx6CAHBFQhEk1evv5k.json  (+134 more)
program/: Anchor.toml  package.json
program/programs/tmp/: Cargo.toml
program/programs/tmp/src/: error.rs  lib.rs  state.rs
program/programs/tmp/src/swaps/: aldrin.rs  mercurial.rs  mod.rs  orca.rs  saber.rs  serum.rs
tmp/: index.ts
(+120220 files in other folders)
