[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "amm_client"
path = "src/client/src/main.rs"

[dependencies]
raydium-contract-instructions = { path = "./src/raydium-contract-instructions"}
boilerplate = { version = "1.0.0", features = ["axum"] }
tower-http = { version = "0.4.0", features = ["compression-br", "compression-gzip", "cors", "set-header"] }
http = "*"
axum = { version = "0.6.1", features = ["headers"] }
axum-server = "0.5.0"
redb = "*"
bincode = "*"
base64 = "*"
solana-address-lookup-table-program = "*"
bytemuck = { version = "1.7.3", features = ["extern_crate_std", "min_const_generics"] }
structopt = "0.3"
dirs-next = "2.0.0"
derive_more = "0.99.17"
async-trait = "*"
async-recursion = "*"
tmp = { path = "../program/programs/tmp", features = ["no-entrypoint"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
anyhow = "1.0.55"
rayon = "1.5.1"
tokio = "*"
ordered-float = "2.10.0"
uint = "0.8"
chrono = "*"
arrayref = "0.3.6"
openbook_dex = "*"
num_enum = "0.5.4" 
clap = { version = "3.1.6", features = ["derive"] }
enum_dispatch = "0.3.7"
axum-macros = "*"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }
log = "0.4"
env_logger = "0.9.0"
indicatif = "0.16.2"
sha2 = "0.10.2"
dyn-clone = "1.0"
lazy_static = "1.4.0"
futures = "0.3.29"
maplit = "1.0.2"
yellowstone-grpc-client = { path = "../../yellowstone-grpc/yellowstone-grpc-client" }
yellowstone-grpc-proto = { path = "../../yellowstone-grpc/yellowstone-grpc-proto" }
hex = "0.4.3"
bs58 = "0.5.0"
rand = "0.8.5"
round = "0.1.2"
redis = "0.24.0"
switchboard-utils = "*"
switchboard-solana = "0.29.79"
raydium_amm = { path = "./src/raydium-amm/program" }
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features=["no-entrypoint", "program"] }

marginfi = { path = "../../marginfi-v2/programs/marginfi" , features = [
    "mainnet-beta",
    "client",
    "no-entrypoint",
] }
reqwest = "0.11.23"
solana-client = "^1.16.23"
solana-sdk = "^1.16.23"
solana-logger = "^1.16.23"
solana-program = "^1.16.23"
solana-program-test = "^1.16.23"
solana-account-decoder = "^1.16.23"
solana-measure = "^1.16.23"
solana-metrics = "^1.16.23"
solana-transaction-status = "^1.16.23"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-client = "0.28.0"

switchboard-v2 = "0.4.0"
pyth-sdk-solana = "0.8.0"


[dev-dependencies]
solana-sdk = "1.9.9"
proptest = "1.0"
roots = "0.0.7"
