[workspace]
resolver = "2"
members = ["programs/*", "clients/rust/*", "tools/*", "observability/indexer"]
exclude = ["programs/brick"]

[workspace.dependencies]
solana-client = "1.16.17"
solana-sdk = "1.16.17"
solana-logger = "1.16.17"
solana-program = "1.16.17"
solana-program-test = "1.16.17"
solana-account-decoder = "1.16.17"
solana-measure = "1.16.17"
solana-metrics = "1.16.17"
solana-transaction-status = "1.16.17"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-client = "0.28.0"

switchboard-v2 = "*"
pyth-sdk-solana = "*"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
