[package]
name = "tmp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tmp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
openbook_dex = { verion = "*" }
anchor-lang = "0.29" # check  for update
solana-program = "*"
# https://github.com/project-serum/anchor/tree/master/spl
anchor-spl = {version="0.29", features=["dex"]}
sha2 = "0.10.2"